website/versioned_docs/version-0.6.3/cli-reference/gitops_ui_run.md
## gitops ui run

Runs gitops ui

```
gitops ui run [--log] [flags]
```

### Options

```
      --helm-repo-name string                    the name of the Helm Repository resource to scan for profiles (default "weaveworks-charts")
      --helm-repo-namespace string               the namespace of the Helm Repository resource to scan for profiles (default "default")
  -h, --help                                     help for run
  -l, --log                                      enable logging for the ui
      --notification-controller-address string   the address of the notification-controller running in the cluster (default "http://notification-controller./")
      --path string                              Path url
      --port string                              UI port (default "9001")
      --profile-cache-location string            the location where the cache Profile data lives (default "/tmp/helm-cache")
      --watcher-healthz-bind-address string      bind address for the healthz service of the watcher (default ":9981")
      --watcher-metrics-bind-address string      bind address for the metrics service of the watcher (default ":9980")
      --watcher-port int                         the port on which the watcher is running (default 9443)
```

### Options inherited from parent commands

```
  -e, --endpoint string    The Weave GitOps Enterprise HTTP API endpoint
      --namespace string   The namespace scope for this operation (default "wego-system")
  -v, --verbose            Enable verbose output
```

### SEE ALSO

* [gitops ui](gitops_ui.md)	 - Manages Gitops UI

###### Auto generated by spf13/cobra on 1-Feb-2022
